--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,15 @@
 </head>
 
 <body>
-{% block content %}
-{% endblock %}
+
+  <!-- Top Bar -->
+  {% include 'includes/_topbar.html' %}
+  <!-- NavBar -->
+  {% include 'includes/_navbar.html' %}
+    <!-- Main Content -->
+  {% block content %} {% endblock %}
+  <!-- Footer -->
+  {% include 'includes/_footer.html' %}
 
   <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
   <script src="{% static 'js/bootstrap.bundle.min.js' %} "></script>
